[gd_scene load_steps=19 format=2]

[ext_resource path="res://Gamepads/PS4/PS4_Gamepad.png" type="Texture" id=1]
[ext_resource path="res://Gamepads/PS4/Keys/Button_Circle.png" type="Texture" id=2]
[ext_resource path="res://Gamepads/PS4/Keys/Button_Triangle.png" type="Texture" id=3]
[ext_resource path="res://Gamepads/PS4/Keys/Button_Cross.png" type="Texture" id=4]
[ext_resource path="res://Gamepads/PS4/Keys/Button_Square.png" type="Texture" id=5]
[ext_resource path="res://Gamepads/PS4/Keys/Dpad_Left.png" type="Texture" id=6]
[ext_resource path="res://Gamepads/PS4/Keys/Dpad_Down.png" type="Texture" id=7]
[ext_resource path="res://Gamepads/PS4/Keys/Dpad_Right.png" type="Texture" id=8]
[ext_resource path="res://Gamepads/PS4/Keys/Dpad_Up.png" type="Texture" id=9]
[ext_resource path="res://Gamepads/PS4/Keys/Trigger_L1.png" type="Texture" id=10]
[ext_resource path="res://Gamepads/PS4/Keys/Trigger_L2.png" type="Texture" id=11]
[ext_resource path="res://Gamepads/PS4/Keys/Trigger_R1.png" type="Texture" id=12]
[ext_resource path="res://Gamepads/PS4/Keys/Trigger_R2.png" type="Texture" id=13]
[ext_resource path="res://Gamepads/PS4/Keys/Button_Share.png" type="Texture" id=14]
[ext_resource path="res://Gamepads/PS4/Keys/Button_Options.png" type="Texture" id=15]
[ext_resource path="res://Gamepads/PS4/PS4_Gamepad.gd" type="Script" id=16]
[ext_resource path="res://Gamepads/PS4/Keys/Axis_Right.png" type="Texture" id=17]
[ext_resource path="res://Gamepads/PS4/Keys/Axis_Left.png" type="Texture" id=18]

[node name="PS4_Gamepad" type="Node2D"]
script = ExtResource( 16 )

[node name="PS4_Gamepad" type="Sprite" parent="."]
position = Vector2( 136, 79.25 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )
centered = false

[node name="Axis_Left" type="Sprite" parent="PS4_Gamepad"]
position = Vector2( 275.5, 259.5 )
scale = Vector2( 1.05, 1.05 )
texture = ExtResource( 18 )

[node name="Axis_Right" type="Sprite" parent="PS4_Gamepad"]
position = Vector2( 533.5, 259.5 )
scale = Vector2( 1.05, 1.05 )
texture = ExtResource( 17 )

[node name="Dpad_Up" type="Sprite" parent="PS4_Gamepad"]
position = Vector2( 153.5, 101.5 )
texture = ExtResource( 9 )

[node name="Dpad_Down" type="Sprite" parent="PS4_Gamepad"]
position = Vector2( 153.5, 181.5 )
texture = ExtResource( 7 )

[node name="Dpad_Left" type="Sprite" parent="PS4_Gamepad"]
position = Vector2( 113.5, 141.5 )
texture = ExtResource( 6 )

[node name="Dpad_Right" type="Sprite" parent="PS4_Gamepad"]
position = Vector2( 193.722, 141.5 )
texture = ExtResource( 8 )

[node name="Button_Cross" type="Sprite" parent="PS4_Gamepad"]
position = Vector2( 655.5, 187.5 )
texture = ExtResource( 4 )

[node name="Button_Share" type="Sprite" parent="PS4_Gamepad"]
position = Vector2( 243.5, 55 )
texture = ExtResource( 14 )

[node name="Button_Circle" type="Sprite" parent="PS4_Gamepad"]
position = Vector2( 699.5, 141.5 )
texture = ExtResource( 2 )

[node name="Button_Square" type="Sprite" parent="PS4_Gamepad"]
position = Vector2( 607.5, 141.5 )
texture = ExtResource( 5 )

[node name="Button_Options" type="Sprite" parent="PS4_Gamepad"]
position = Vector2( 563.5, 55.5 )
texture = ExtResource( 15 )

[node name="Button_Triangle" type="Sprite" parent="PS4_Gamepad"]
position = Vector2( 655.119, 94.0001 )
texture = ExtResource( 3 )

[node name="Trigger_L1" type="Sprite" parent="PS4_Gamepad"]
position = Vector2( 159, 16 )
texture = ExtResource( 10 )

[node name="Trigger_L2" type="Sprite" parent="PS4_Gamepad"]
position = Vector2( 157.5, -64 )
texture = ExtResource( 11 )

[node name="Trigger_R1" type="Sprite" parent="PS4_Gamepad"]
position = Vector2( 655.2, 16 )
texture = ExtResource( 12 )

[node name="Trigger_R2" type="Sprite" parent="PS4_Gamepad"]
position = Vector2( 655.2, -64 )
texture = ExtResource( 13 )
